syntax = "proto3";

package ChittyChat;

option go_package = "grpc/proto";

service ChittyChat {
    rpc Broadcast(stream ClientMessage) returns (stream ClientMessage);
}

message ClientMessage {
  int64 clientId = 1;
  string message = 2;
  int64 timestamp = 3;
}

